<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/bearing"
            android:hint="@string/hint_bearing"
            android:inputType="numberDecimal"
            android:layout_toLeftOf="@+id/compass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/compass"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/bearing"
            android:layout_alignTop="@id/bearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_use_compass"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/bearing2"
            android:hint="@string/hint_bearing2"
            android:inputType="numberDecimal"
            android:layout_toLeftOf="@+id/compass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/compass2"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/bearing2"
            android:layout_alignTop="@id/bearing2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_use_compass"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/model"
        android:hint="@string/hint_model_name"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/frequency"
        android:hint="@string/hint_transmitter_frequency"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="100"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/time"
            android:hint="@string/hint_time_seconds"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/wind"
            android:hint="@string/hint_wind_ms"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/save"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_save"/>

</LinearLayout>