<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navi_panel"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/accent_transparent"/>

    <TextView
        android:id="@+id/map_size"
        android:gravity="center"
        android:text="@string/dots"
        android:textColor="@android:color/white"
        android:background="@color/semi_transparent_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_size_panel" />

    <LinearLayout
        android:id="@+id/navi_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/semi_transparent_black">

        <TextView
            android:id="@+id/model_name"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/offset_label"
            android:text="@string/label_deviation"
            android:textSize="@dimen/navigation_fragment_label_size"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dots"
            android:textSize="42sp"
            android:textColor="@color/red"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/semi_transparent_white" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="50">

                <TextView
                    android:id="@+id/to_start_label"
                    android:text="@string/label_distance_to_start"
                    android:textSize="@dimen/navigation_fragment_label_size"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/to_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="32sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/semi_transparent_white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="50">

                <TextView
                    android:id="@+id/total_label"
                    android:text="@string/label_traveled_distance"
                    android:textSize="@dimen/navigation_fragment_label_size"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="32sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>